--- a/templates/scheduler_settings.html
+++ b/templates/scheduler_settings.html
@@ -49,7 +49,7 @@
                 {% endif %}
                 <div class="form-group {{ col_class }}">
                     <label for="slot_{{ i }}_end_hour">结束小时</label>
-                    <input type="number" class="form-control" id="slot_{{ i }}_end_hour" name="slot_{{ i }}_end_hour" value="{{ slot.end_hour if slot.end_hour is not none else '12' }}" min="0" max="23">
+                    <input type="number" class="form-control" id="slot_{{ i }}_end_hour" name="slot_{{ i }}_end_hour" value="{{ slot.end_hour if slot.end_hour is not none else '12' }}" min="0" max="24">
                 </div>
                 <div class="form-group {{ col_class }}">
                     <label for="slot_{{ i }}_end_minute">结束分钟</label>
@@ -62,7 +62,7 @@
                 </div>
                 {% endif %}
             </div>
-            <p class="text-muted"><small>请确保结束时间晚于开始时间。如果此时间段名称留空，则此时间段的设置将被忽略。</small></p>
+            <p class="text-muted"><small>如果结束时间早于开始时间，将视为跨天时间段。如果此时间段名称留空，则此时间段的设置将被忽略。</small></p>
         </div>
     </div>
     {% endfor %}
