--- a/webapp/templates/change_password.html
+++ b/webapp/templates/change_password.html
@@ -10,7 +10,7 @@
                 <h2>修改密码</h2>
             </div>
             <div class="card-body">
-                <form method="POST" action="{{ url_for('change_password') }}">
+                <form method="POST" action="{{ url_for('auth.change_password') }}">
                     <div class="form-group">
                         <label for="current_password">当前密码</label>
                         <input type="password" class="form-control" id="current_password" name="current_password" required>
