增加群组任务消息编辑功能

--- a/webapp/templates/bots.html
+++ b/webapp/templates/bots.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <h2>机器人管理</h2>
-<p>添加需要进行签到的Telegram机器人用户名 (例如 YounoEmby_bot)。</p>
+<p>添加需要进行签到的Telegram机器人用户名。</p>
 
 <form id="addBotForm" class="mb-4">
     <div class="form-row align-items-end">
